[gd_scene load_steps=12 format=3 uid="uid://c32vifq51i5ei"]

[ext_resource type="Texture2D" uid="uid://cy4xfx762bxgb" path="res://assets/sprites/BG.png" id="1_5tue2"]
[ext_resource type="Script" uid="uid://diuyekdj1taaa" path="res://scenes/arena/arena.gd" id="1_asdgj"]
[ext_resource type="Texture2D" uid="uid://ov4fmsbglo55" path="res://assets/sprites/Map.png" id="2_aj7ud"]
[ext_resource type="PackedScene" uid="uid://dhj46crcrqjw6" path="res://scenes/unit/players/player_well_rounded.tscn" id="3_asdgj"]
[ext_resource type="Script" uid="uid://4jtfnt1n5ne3" path="res://scenes/arena/camera_2d.gd" id="4_aj7ud"]
[ext_resource type="Script" uid="uid://c5b2w0rb6bn11" path="res://scenes/arena/spawner.gd" id="7_u52cf"]
[ext_resource type="Script" uid="uid://dumltpv332dl4" path="res://resources/waves/wave_data.gd" id="8_6w4xk"]
[ext_resource type="Resource" uid="uid://tm3wrmicsrh3" path="res://resources/waves/data/wave_1_to_5.tres" id="9_2ml6w"]
[ext_resource type="PackedScene" uid="uid://b7227lh736bjg" path="res://scenes/ui/stats_container/stats_container.tscn" id="9_6w4xk"]

[sub_resource type="LabelSettings" id="LabelSettings_6w4xk"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_2ml6w"]
font_size = 60

[node name="Arena" type="Node2D" node_paths=PackedStringArray("player")]
script = ExtResource("1_asdgj")
player = NodePath("PlayerWellRounded")
normal_color = Color(1, 1, 1, 1)
blocked_color = Color(1, 0.290196, 0.454902, 1)
critical_color = Color(0.996078, 0.780392, 0.380392, 1)
hp_color = Color(0, 0.627451, 0.482353, 1)
metadata/_custom_type_script = "uid://dvlyuwfk08kre"

[node name="BlackBG" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_5tue2")

[node name="GrassBG" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_aj7ud")

[node name="PlayerWellRounded" parent="." instance=ExtResource("3_asdgj")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, 0)
script = ExtResource("4_aj7ud")

[node name="Spawner" type="Node2D" parent="."]
position = Vector2(2, -2)
script = ExtResource("7_u52cf")
waves_data = Array[ExtResource("8_6w4xk")]([ExtResource("9_2ml6w")])

[node name="SpawnTimer" type="Timer" parent="Spawner"]
one_shot = true

[node name="WaveTimer" type="Timer" parent="Spawner"]
one_shot = true

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="WaveIndexLabel" type="Label" parent="GameUI"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.5
offset_top = 20.0
offset_right = 110.5
offset_bottom = 97.3333
grow_horizontal = 2
text = "WAVE 1"
label_settings = SubResource("LabelSettings_6w4xk")

[node name="WaveTimeLabel" type="Label" parent="GameUI"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.5
offset_top = 100.0
offset_right = 110.5
offset_bottom = 257.333
grow_horizontal = 2
text = "10
"
label_settings = SubResource("LabelSettings_2ml6w")
horizontal_alignment = 1

[node name="StatsContainer" parent="GameUI" instance=ExtResource("9_6w4xk")]

[connection signal="timeout" from="Spawner/SpawnTimer" to="Spawner" method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="Spawner/WaveTimer" to="Spawner" method="_on_wave_timer_timeout"]
